--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "cam_2_cam",
-    "short_name": "cam_2_cam",
+    "name": "i_dance",
+    "short_name": "i_dance",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
@@ -18,6 +18,18 @@
             "src": "icons/Icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
+        },
+        {
+            "src": "icons/Icon-maskable-192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "icons/Icon-maskable-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ]
 }
